The initial state comes from https://launchpad.net/usb-imagewriter
The modifications are:

IsoDumper 0.20
------------
	  - added function to backup the content of the device before overwriting.
	  - added Release number in the window title (on isodumper.py).
	  - added and update Estonian translations.
	  - updated  de,fr,id,ro,sl,sv,zh_TW,tr,uk,pt_BR,ru,es and it translations.
	  
IsoDumper 0.13
------------
	  - added and update Polish and German translations.
	  - updated Dutch and Italian translations.
	  - added a Makefile file for build package.
	  - added a pixmaps icons.
	  - usermode-consoleonly is not a BuildRequires, but it is a Requires package.
	  - improvement po-update.sh script for translations.
	  - added Release number in the window title.

IsoDumper 0.12
------------
	  - Correction of bugs in the device name and in the dialog box loops
	  - Added a catch of writing error

IsoDumper 0.11
------------
	  - added check for the size of the destination device.
	  - added a button to retry in the no_device dialog box.
	  - added a dialog box for devices with a size of 32 GB and more.
	  - added and update Swedish, Chinese, Brazilian Portuguese, Indonesian and Romanian translations.
	  - updated Ukrainian, Russian, Slovenian, Spanish, Turkish Translations.

IsoDumper 0.10
------------
	  - added and update Russian, Ukrainian, Spanish, Dutch, Italian, Turkish and Slovenian translations
	  - update French translation
	  - added ru, uk, es, nl, it, tr and sl comment in .desktop file
	  - added po-update.sh and po-compile.sh files for translations (see i18n.md for more details)


IsoDumper 0.1
------------
	  - changing the name into isodumper
	  - replaced the dd command with direct writing command python.
	  - progressbar is functionnal.
	  - replaced the banner (header.png) with an Mageia's header.
	  - added .iso filter.
	  - added writing ~/.isodumper/isodumper.log at the end.
	  - writing progression in details only each 1%.